[project]
name = "job-seeking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "genai>=2.1.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "path>=17.1.1",
    "pdfplumber>=0.11.9",
    "pydantic[email]>=2.13.3",
    "python-multipart>=0.0.26",
    "uvicorn>=0.46.0",
]
